Classification retraining data adjustment done

--- a/notebooks/data_processing/data_cleanup.ipynb
+++ b/notebooks/data_processing/data_cleanup.ipynb
@@ -460,10 +460,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moved 9 images from barras_de_coco_paquetin_strip to barras_de_coco_paquetin\n",
+      "Moved 14 images from chokis_chocotella_paquetin_strip to chokis_chocotella_paquetin\n",
+      "Moved 10 images from cremax_de_nieve_chocolate_strip to cremax_de_nieve_chocolate\n",
+      "Moved 9 images from cremax_de_nieve_fresa_strip to cremax_de_nieve_fresa\n",
+      "Moved 6 images from cremax_de_nieve_vainilla_strip to cremax_de_nieve_vainilla\n",
+      "Moved 5 images from delicias_bolsa_strip to delicias_bolsa\n",
+      "Moved 3 images from flor_de_naranjo_paquetin_strip to flor_de_naranjo_paquetin\n",
+      "Moved 210 images from maravillas_strip to maravillas\n",
+      "Moved 13 images from marias_doradas_strip to marias_doradas\n",
+      "Moved 93 images from mini_marias_chocolate_bolsa_strip to mini_marias_chocolate_bolsa\n",
+      "Moved 238 images from mini_marias_bolsa_strip to mini_marias_bolsa\n"
+     ]
+    }
+   ],
+   "source": [
+    "#!/usr/bin/env python\n",
+    "\n",
+    "import subprocess as sbp\n",
+    "import os\n",
+    "\n",
+    "folder_lookup = [('barras_de_coco_paquetin_strip', 'barras_de_coco_paquetin'),\n",
+    "('chokis_chocotella_paquetin_strip', 'chokis_chocotella_paquetin'),\n",
+    "('cremax_de_nieve_chocolate_strip', 'cremax_de_nieve_chocolate'),\n",
+    "('cremax_de_nieve_fresa_strip', 'cremax_de_nieve_fresa'),\n",
+    "('cremax_de_nieve_vainilla_strip', 'cremax_de_nieve_vainilla'),\n",
+    "('delicias_bolsa_strip', 'delicias_bolsa'),\n",
+    "('flor_de_naranjo_paquetin_strip', 'flor_de_naranjo_paquetin'),\n",
+    "('maravillas_strip', 'maravillas'),\n",
+    "('marias_doradas_strip', 'marias_doradas'),\n",
+    "('mini_marias_chocolate_bolsa_strip', 'mini_marias_chocolate_bolsa'),\n",
+    "('mini_marias_bolsa_strip', 'mini_marias_bolsa')]\n",
+    "\n",
+    "\n",
+    "parent_folder_path = '/home/sumit-tyagi/sumit-ssd/common-biscuit/main/planogram_biscuit/data/cropped_images/1108_0threshold_0image_size_73folders/train'\n",
+    "for f2, f1 in folder_lookup:\n",
+    "    try:\n",
+    "        path_1= os.path.join(parent_folder_path, f1)\n",
+    "        previous_count = int(os.listdir(path_1)[-1].split()[1].split('.')[0])\n",
+    "        counter = previous_count + 1\n",
+    "\n",
+    "        path_2 = os.path.join(parent_folder_path, f2)\n",
+    "        for image in os.listdir(path_2):\n",
+    "            sbp.call(['mv', os.path.join(path_2, image), os.path.join(path_1, 'Image '+ str(counter)+'.jpg')])\n",
+    "            counter += 1\n",
+    "        print('Moved', counter - previous_count, 'images from', f2, 'to', f1)\n",
+    "        os.rmdir(path_2)\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "parent_folder_path = '/home/sumit-tyagi/sumit-ssd/common-biscuit/main/planogram_biscuit/data/cropped_images/1108_0threshold_0image_size_73folders/valid'\n",
+    "for f2, f1 in folder_lookup:\n",
+    "    try:\n",
+    "        path_1= os.path.join(parent_folder_path, f1)\n",
+    "        previous_count = int(os.listdir(path_1)[-1].split()[1].split('.')[0])\n",
+    "        counter = previous_count + 1\n",
+    "\n",
+    "        path_2 = os.path.join(parent_folder_path, f2)\n",
+    "        for image in os.listdir(path_2):\n",
+    "            sbp.call(['mv', os.path.join(path_2, image), os.path.join(path_1, 'Image '+ str(counter)+'.jpg')])\n",
+    "            counter += 1\n",
+    "        print('Moved', counter - previous_count, 'images from', f2, 'to', f1)\n",
+    "        os.rmdir(path_2)\n",
+    "    except Exception as e:\n",
+    "        print(e)"
+   ]
   }
  ],
  "metadata": {
