--- a/notebooks/classification/classification_training.ipynb
+++ b/notebooks/classification/classification_training.ipynb
@@ -88,53 +88,53 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-11-08 09:10:46.776277: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.11.0\n"
+      "2021-11-30 16:43:45.471618: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.11.0\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 85633 images belonging to 73 classes.\n",
-      "Found 14165 images belonging to 73 classes.\n"
+      "Found 85316 images belonging to 46 classes.\n",
+      "Found 14094 images belonging to 46 classes.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-11-08 09:10:50.341295: I tensorflow/compiler/jit/xla_cpu_device.cc:41] Not creating XLA devices, tf_xla_enable_xla_devices not set\n",
-      "2021-11-08 09:10:50.342662: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcuda.so.1\n",
-      "2021-11-08 09:10:50.349083: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1720] Found device 0 with properties: \n",
+      "2021-11-30 16:43:57.820711: I tensorflow/compiler/jit/xla_cpu_device.cc:41] Not creating XLA devices, tf_xla_enable_xla_devices not set\n",
+      "2021-11-30 16:43:57.831000: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcuda.so.1\n",
+      "2021-11-30 16:43:57.867664: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1720] Found device 0 with properties: \n",
       "pciBusID: 0001:00:00.0 name: Tesla P100-PCIE-16GB computeCapability: 6.0\n",
       "coreClock: 1.3285GHz coreCount: 56 deviceMemorySize: 15.90GiB deviceMemoryBandwidth: 681.88GiB/s\n",
-      "2021-11-08 09:10:50.349110: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.11.0\n",
-      "2021-11-08 09:10:50.353527: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcublas.so.11\n",
-      "2021-11-08 09:10:50.353580: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcublasLt.so.11\n",
-      "2021-11-08 09:10:50.355019: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcufft.so.10\n",
-      "2021-11-08 09:10:50.355328: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcurand.so.10\n",
-      "2021-11-08 09:10:50.358866: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcusolver.so.10\n",
-      "2021-11-08 09:10:50.359619: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcusparse.so.11\n",
-      "2021-11-08 09:10:50.359782: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudnn.so.8\n",
-      "2021-11-08 09:10:50.361323: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1862] Adding visible gpu devices: 0\n",
-      "2021-11-08 09:10:50.362178: I tensorflow/compiler/jit/xla_gpu_device.cc:99] Not creating XLA devices, tf_xla_enable_xla_devices not set\n",
-      "2021-11-08 09:10:50.362938: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1720] Found device 0 with properties: \n",
+      "2021-11-30 16:43:57.867691: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.11.0\n",
+      "2021-11-30 16:43:57.979274: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcublas.so.11\n",
+      "2021-11-30 16:43:57.979326: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcublasLt.so.11\n",
+      "2021-11-30 16:43:58.051543: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcufft.so.10\n",
+      "2021-11-30 16:43:58.083903: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcurand.so.10\n",
+      "2021-11-30 16:43:58.190328: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcusolver.so.10\n",
+      "2021-11-30 16:43:58.217686: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcusparse.so.11\n",
+      "2021-11-30 16:43:58.227575: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudnn.so.8\n",
+      "2021-11-30 16:43:58.233798: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1862] Adding visible gpu devices: 0\n",
+      "2021-11-30 16:43:58.235067: I tensorflow/compiler/jit/xla_gpu_device.cc:99] Not creating XLA devices, tf_xla_enable_xla_devices not set\n",
+      "2021-11-30 16:43:58.235964: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1720] Found device 0 with properties: \n",
       "pciBusID: 0001:00:00.0 name: Tesla P100-PCIE-16GB computeCapability: 6.0\n",
       "coreClock: 1.3285GHz coreCount: 56 deviceMemorySize: 15.90GiB deviceMemoryBandwidth: 681.88GiB/s\n",
-      "2021-11-08 09:10:50.362963: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.11.0\n",
-      "2021-11-08 09:10:50.362987: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcublas.so.11\n",
-      "2021-11-08 09:10:50.363006: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcublasLt.so.11\n",
-      "2021-11-08 09:10:50.363024: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcufft.so.10\n",
-      "2021-11-08 09:10:50.363041: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcurand.so.10\n",
-      "2021-11-08 09:10:50.363059: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcusolver.so.10\n",
-      "2021-11-08 09:10:50.363076: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcusparse.so.11\n",
-      "2021-11-08 09:10:50.363093: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudnn.so.8\n",
-      "2021-11-08 09:10:50.364445: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1862] Adding visible gpu devices: 0\n",
-      "2021-11-08 09:10:50.364494: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.11.0\n",
-      "2021-11-08 09:10:51.560741: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1261] Device interconnect StreamExecutor with strength 1 edge matrix:\n",
-      "2021-11-08 09:10:51.560781: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1267]      0 \n",
-      "2021-11-08 09:10:51.560790: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1280] 0:   N \n",
-      "2021-11-08 09:10:51.563122: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1406] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 11008 MB memory) -> physical GPU (device: 0, name: Tesla P100-PCIE-16GB, pci bus id: 0001:00:00.0, compute capability: 6.0)\n"
+      "2021-11-30 16:43:58.235989: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.11.0\n",
+      "2021-11-30 16:43:58.236013: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcublas.so.11\n",
+      "2021-11-30 16:43:58.236031: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcublasLt.so.11\n",
+      "2021-11-30 16:43:58.236048: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcufft.so.10\n",
+      "2021-11-30 16:43:58.236064: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcurand.so.10\n",
+      "2021-11-30 16:43:58.236080: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcusolver.so.10\n",
+      "2021-11-30 16:43:58.236096: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcusparse.so.11\n",
+      "2021-11-30 16:43:58.236113: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudnn.so.8\n",
+      "2021-11-30 16:43:58.237716: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1862] Adding visible gpu devices: 0\n",
+      "2021-11-30 16:43:58.242112: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.11.0\n",
+      "2021-11-30 16:44:02.985512: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1261] Device interconnect StreamExecutor with strength 1 edge matrix:\n",
+      "2021-11-30 16:44:02.985553: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1267]      0 \n",
+      "2021-11-30 16:44:02.985562: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1280] 0:   N \n",
+      "2021-11-30 16:44:02.996772: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1406] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 14957 MB memory) -> physical GPU (device: 0, name: Tesla P100-PCIE-16GB, pci bus id: 0001:00:00.0, compute capability: 6.0)\n"
      ]
     },
     {
@@ -151,10 +151,10 @@
       "_________________________________________________________________\n",
       "dense (Dense)                (None, 256)               1573120   \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 73)                18761     \n",
+      "dense_1 (Dense)              (None, 46)                11822     \n",
       "=================================================================\n",
-      "Total params: 55,928,617\n",
-      "Trainable params: 55,867,209\n",
+      "Total params: 55,921,678\n",
+      "Trainable params: 55,860,270\n",
       "Non-trainable params: 61,408\n",
       "_________________________________________________________________\n",
       "None\n"
@@ -164,8 +164,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-11-08 09:10:59.614378: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:116] None of the MLIR optimization passes are enabled (registered 2)\n",
-      "2021-11-08 09:10:59.614961: I tensorflow/core/platform/profile_utils/cpu_utils.cc:112] CPU Frequency: 2593990000 Hz\n"
+      "2021-11-30 16:44:14.128241: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:116] None of the MLIR optimization passes are enabled (registered 2)\n",
+      "2021-11-30 16:44:14.143385: I tensorflow/core/platform/profile_utils/cpu_utils.cc:112] CPU Frequency: 2593990000 Hz\n"
      ]
     },
     {
@@ -179,43 +179,59 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-11-08 09:11:32.660653: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcublas.so.11\n",
-      "2021-11-08 09:11:33.156559: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcublasLt.so.11\n",
-      "2021-11-08 09:11:33.226986: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudnn.so.8\n"
+      "2021-11-30 16:44:42.431821: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcublas.so.11\n",
+      "2021-11-30 16:44:44.943670: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcublasLt.so.11\n",
+      "2021-11-30 16:44:45.108926: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudnn.so.8\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "669/669 [==============================] - 546s 757ms/step - loss: 0.9918 - acc: 0.7612 - val_loss: 0.6078 - val_acc: 0.9134\n",
+      "666/666 [==============================] - 651s 902ms/step - loss: 0.8999 - acc: 0.7754 - val_loss: 0.6991 - val_acc: 0.9117\n",
       "Epoch 2/100\n",
-      "669/669 [==============================] - 504s 753ms/step - loss: 0.2974 - acc: 0.9283 - val_loss: 0.8577 - val_acc: 0.9026\n",
+      "666/666 [==============================] - 316s 474ms/step - loss: 0.2829 - acc: 0.9289 - val_loss: 1.9376 - val_acc: 0.9306\n",
       "Epoch 3/100\n",
-      "669/669 [==============================] - 503s 751ms/step - loss: 0.2451 - acc: 0.9410 - val_loss: 1.2364 - val_acc: 0.8935\n",
+      "666/666 [==============================] - 315s 472ms/step - loss: 0.2182 - acc: 0.9459 - val_loss: 0.6500 - val_acc: 0.9404\n",
       "Epoch 4/100\n",
-      "669/669 [==============================] - 503s 751ms/step - loss: 0.2056 - acc: 0.9499 - val_loss: 2.6225 - val_acc: 0.9270\n",
-      "\n",
-      "Epoch 00004: ReduceLROnPlateau reducing learning rate to 1.9999999494757503e-05.\n",
+      "666/666 [==============================] - 315s 473ms/step - loss: 0.1841 - acc: 0.9532 - val_loss: 0.3896 - val_acc: 0.9484\n",
       "Epoch 5/100\n",
-      "669/669 [==============================] - 503s 751ms/step - loss: 0.1526 - acc: 0.9618 - val_loss: 1.7665 - val_acc: 0.9477\n",
+      "666/666 [==============================] - 315s 472ms/step - loss: 0.1637 - acc: 0.9584 - val_loss: 1.8021 - val_acc: 0.8634\n",
       "Epoch 6/100\n",
-      "669/669 [==============================] - 503s 751ms/step - loss: 0.1270 - acc: 0.9668 - val_loss: 2.6641 - val_acc: 0.9486\n",
+      "666/666 [==============================] - 315s 472ms/step - loss: 0.1474 - acc: 0.9614 - val_loss: 1.0750 - val_acc: 0.9321\n",
       "Epoch 7/100\n",
-      "669/669 [==============================] - 498s 743ms/step - loss: 0.1126 - acc: 0.9697 - val_loss: 4.2124 - val_acc: 0.9473\n",
+      "666/666 [==============================] - 314s 472ms/step - loss: 0.1333 - acc: 0.9643 - val_loss: 1.2443 - val_acc: 0.9448\n",
       "\n",
-      "Epoch 00007: ReduceLROnPlateau reducing learning rate to 1.9999999494757505e-06.\n",
+      "Epoch 00007: ReduceLROnPlateau reducing learning rate to 1.9999999494757503e-05.\n",
       "Epoch 8/100\n",
-      "669/669 [==============================] - 504s 752ms/step - loss: 0.1083 - acc: 0.9697 - val_loss: 5.5556 - val_acc: 0.9460\n",
+      "666/666 [==============================] - 314s 472ms/step - loss: 0.1028 - acc: 0.9720 - val_loss: 0.3345 - val_acc: 0.9583\n",
       "Epoch 9/100\n",
-      "669/669 [==============================] - 503s 751ms/step - loss: 0.0981 - acc: 0.9723 - val_loss: 4.9816 - val_acc: 0.9480\n",
+      "666/666 [==============================] - 315s 472ms/step - loss: 0.0720 - acc: 0.9783 - val_loss: 0.4957 - val_acc: 0.9552\n",
       "Epoch 10/100\n",
-      "669/669 [==============================] - 504s 752ms/step - loss: 0.1002 - acc: 0.9725 - val_loss: 6.3360 - val_acc: 0.9469\n",
-      "\n",
-      "Epoch 00010: ReduceLROnPlateau reducing learning rate to 1.9999999949504855e-07.\n",
+      "666/666 [==============================] - 315s 472ms/step - loss: 0.0640 - acc: 0.9806 - val_loss: 0.4272 - val_acc: 0.9569\n",
       "Epoch 11/100\n",
-      "669/669 [==============================] - 503s 751ms/step - loss: 0.1015 - acc: 0.9709 - val_loss: 4.5406 - val_acc: 0.9488\n",
-      "Epoch 00011: early stopping\n",
+      "666/666 [==============================] - 315s 473ms/step - loss: 0.0620 - acc: 0.9815 - val_loss: 0.5147 - val_acc: 0.9571\n",
+      "\n",
+      "Epoch 00011: ReduceLROnPlateau reducing learning rate to 1.9999999494757505e-06.\n",
+      "Epoch 12/100\n",
+      "666/666 [==============================] - 315s 472ms/step - loss: 0.0530 - acc: 0.9832 - val_loss: 0.4405 - val_acc: 0.9576\n",
+      "Epoch 13/100\n",
+      "666/666 [==============================] - 315s 473ms/step - loss: 0.0537 - acc: 0.9833 - val_loss: 0.4332 - val_acc: 0.9576\n",
+      "Epoch 14/100\n",
+      "666/666 [==============================] - 315s 472ms/step - loss: 0.0542 - acc: 0.9834 - val_loss: 0.4488 - val_acc: 0.9576\n",
+      "\n",
+      "Epoch 00014: ReduceLROnPlateau reducing learning rate to 1.9999999949504855e-07.\n",
+      "Epoch 15/100\n",
+      "666/666 [==============================] - 315s 472ms/step - loss: 0.0534 - acc: 0.9832 - val_loss: 0.4404 - val_acc: 0.9574\n",
+      "Epoch 16/100\n",
+      "666/666 [==============================] - 315s 472ms/step - loss: 0.0508 - acc: 0.9837 - val_loss: 0.4377 - val_acc: 0.9579\n",
+      "Epoch 17/100\n",
+      "666/666 [==============================] - 315s 472ms/step - loss: 0.0522 - acc: 0.9839 - val_loss: 0.4393 - val_acc: 0.9576\n",
+      "\n",
+      "Epoch 00017: ReduceLROnPlateau reducing learning rate to 2.000000023372195e-08.\n",
+      "Epoch 18/100\n",
+      "666/666 [==============================] - 315s 472ms/step - loss: 0.0499 - acc: 0.9843 - val_loss: 0.4373 - val_acc: 0.9576\n",
+      "Epoch 00018: early stopping\n",
       "Training complete\n"
      ]
     },
@@ -223,11 +239,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 14165/14165 [18:33<00:00, 12.72it/s]\n",
-      "100%|██████████| 14165/14165 [15:18<00:00, 15.43it/s]\n",
-      "  0%|          | 0/73 [00:00<?, ?it/s]/home/sumit-tyagi/sumit-ssd/common-biscuit/installs/anaconda3/envs/classify/lib/python3.8/site-packages/tensorflow/python/keras/engine/sequential.py:450: UserWarning: `model.predict_classes()` is deprecated and will be removed after 2021-01-01. Please use instead:* `np.argmax(model.predict(x), axis=-1)`,   if your model does multi-class classification   (e.g. if it uses a `softmax` last-layer activation).* `(model.predict(x) > 0.5).astype(\"int32\")`,   if your model does binary classification   (e.g. if it uses a `sigmoid` last-layer activation).\n",
-      "  warnings.warn('`model.predict_classes()` is deprecated and '\n",
-      "100%|██████████| 73/73 [01:06<00:00,  1.10it/s]\n"
+      "  0%|          | 0/14094 [00:00<?, ?it/s]"
      ]
     }
    ],
