Sanity check, 2 rack handling, compliance senstivitity updated

--- a/notebooks/classification/classification-2.ipynb
+++ b/notebooks/classification/classification-2.ipynb
@@ -14,12 +14,26 @@
     }
    ],
    "source": [
-    "!pwd "
+    "!pwd \n",
+    "# pyzmq-15.3.0         | 847 KB    | ######################## | 100% \n",
+    "# openssl-1.0.2u       | 3.2 MB    | ######################## | 100% \n",
+    "# libstdcxx-ng-11.2.0  | 4.2 MB    | ######################## | 100% \n",
+    "# traitlets-4.3.1      | 127 KB    | ######################## | 100% \n",
+    "# ipykernel-4.5.2      | 133 KB    | ######################## | 100% \n",
+    "# decorator-4.4.2      | 11 KB     | ######################## | 100% \n",
+    "# tornado-4.4.2        | 582 KB    | ######################## | 100% \n",
+    "# jupyter_core-4.5.0   | 44 KB     | ######################## | 100% \n",
+    "# certifi-2017.1.23    | 222 KB    | ######################## | 100% \n",
+    "# jupyter_client-5.3.3 | 65 KB     | ######################## | 100% \n",
+    "# backports.shutil_get | 7 KB      | ######################## | 100% \n",
+    "# ipython-4.2.1        | 998 KB    | ######################## | 100% \n",
+    "# backports_abc-0.5    | 5 KB      | ######################## | 100% \n",
+    "# python-dateutil-2.8."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.4.5"
   },
   "orig_nbformat": 4
  },
