Preparing for Staging

--- a/notebooks/model_integration/sanity_check.ipynb
+++ b/notebooks/model_integration/sanity_check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scoring.check_image import sanity_check"
+    "from scoring.check_image import sanity_check,image_sanity_check"
    ]
   },
   {
@@ -204,16 +204,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import subprocess as sbp\n",
-    "file_location = '/media/premium/common-biscuit/main/planogram_biscuit/data/output/compliance_visualization/compliance_output_updated'\n",
-    "save_location = '/media/premium/common-biscuit/main/planogram_biscuit/data/output/validation/image_sanity_check/'\n",
-    "for k,v in remove_images.items():\n",
-    "    sbp.call(['cp', os.path.join(file_location, k.split(\".\")[0]+'.jpg'), os.path.join(save_location,k.split(\".\")[0]+'.jpg')])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -221,9 +215,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "remove_images = image_sanity_check()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import subprocess as sbp\n",
+    "file_location = '/media/premium/common-biscuit/main/planogram_biscuit/data/output/compliance_visualization/compliance_output_updated'\n",
+    "save_location = '/media/premium/common-biscuit/main/planogram_biscuit/data/output/validation/image_sanity_check_new1/'\n",
+    "for k,v in remove_images.items():\n",
+    "    sbp.call(['cp', os.path.join(file_location, k.split(\".\")[0]+'.jpg'), os.path.join(save_location,k.split(\".\")[0]+'.jpg')])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34.1874 34.26075\n",
+      "22.0689 21.146142857142856\n",
+      "32.8608 51.25454545454546\n",
+      "11.1834 23.267\n",
+      "32.246 26.996875\n",
+      "23.091833333333337 0\n",
+      "2.4733 0\n",
+      "120.549 206.06574999999998\n",
+      "86.80289999999998 97.06223076923078\n",
+      "77.72453333333334 76.36484999999999\n",
+      "9.18 38.43183333333334\n",
+      "71.4917 31.325509090909094\n"
+     ]
+    }
+   ],
+   "source": [
     "from scoring.check_image import image_sanity_check\n",
     "\n",
     "remove_images = image_sanity_check()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(remove_images)"
    ]
   },
   {
